# bevy_sparse_tilemap

./: Cargo.toml  README.md
assets/: tiles_16.aseprite
crates/bevy_sparse_tilemap_derive/: Cargo.toml
crates/bevy_sparse_tilemap_derive/src/: lib.rs
crates/bst_map_layer_derive/: Cargo.toml  LICENSE  README.md
examples/: bevy_fast_tilemap_example.rs  hexagon.rs  simple.rs  square.rs  square_bevy_fast_tilemap.rs
src/: cell.rs  grid.rs  lib.rs
src/bevy_fast_tilemap/: mod.rs
src/hex/: map_chunk_layer.rs  map_data.rs  mod.rs
src/integrations/: mod.rs
src/integrations/bevy_fast_tilemap/: mod.rs
src/map/: chunk.rs  commands.rs  layer.rs  mod.rs  tilemap.rs
src/map/chunk/: chunk_cell.rs  chunk_layer.rs  chunk_pos.rs  chunk_tile_pos.rs  layer_data.rs  mod.rs
src/map/chunk/layer_data/: mod.rs  square.rs
src/square/: map_chunk_layer.rs  map_data.rs  mod.rs
src/tilemap_builder/: mod.rs  tilemap_layer_builder.rs
src/tilemap_manager/: errors.rs  mod.rs  tilemap_manager.rs
src/tiles/: mod.rs
