[package]
name = "bevy_sparse_tilemap"
description = "A Tilemap crate for the Bevy game engine with a focus on large map sizes and ECS sparse maps"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Noah Shomette <git@noahshomette.me>"]
repository = "https://github.com/NoahShomette/bevy_sparse_tilemap"
homepage = "https://github.com/NoahShomette/bevy_sparse_tilemap"

[workspace]
members = ["crates/bst_map_layer_derive"]
resolver = "2"

[features]
default = []
bevy_fast_tilemap = ["dep:bevy_fast_tilemap"]

[badges]
maintenance = { status = "actively-developed" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11", default-features = false, features = [] }
bst_map_layer_derive = {version = "0.1.0"}
grid = "0.10.0"
thiserror = "1.0.44"

# Optional feature based dependencies
# Rendering with bevy_fast_tilemap
bevy_fast_tilemap = { version = "0.5.1", optional = true }


[dev-dependencies]
bevy_fast_tilemap = { version = "0.5.1" }
bevy = { version = "0.11.0" }
rand = {version = "0.8.5"}
bevy-inspector-egui = "0.19.0"
