[package]
name = "bevy_sparse_tilemap"
description = "A Tilemap crate for the Bevy game engine with a focus on large map sizes and ECS sparse maps"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Noah Shomette <git@noahshomette.me>"]
repository = "https://github.com/NoahShomette/bevy_sparse_tilemap"
homepage = "https://github.com/NoahShomette/bevy_sparse_tilemap"

[workspace]
members = ["crates/bst_map_layer_derive"]
resolver = "2"

[features]
default = ["serde", "lettuces/bevy", "hex", "square"]
# bevy_fast_tilemap = ["dep:bevy_fast_tilemap"]
serde = ["dep:serde", "serde/default", "bevy/serialize", "lettuces/serde"]
reflect = ["lettuces/bevy_reflect"]
hex = []
square = []

[badges]
maintenance = { status = "actively-developed" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.13", default-features = false, features = [] }
bst_map_layer_derive = { version = "0.1.0" }
thiserror = "1.0.44"
lettuces = { version = "0.0.6" }

# Optional feature based dependencies
# Rendering with bevy_fast_tilemap - Removed for now since we dont actually do anything with it
# bevy_fast_tilemap = { version = "0.5.1", optional = true }
serde = { version = "1.0.183", optional = true }


[dev-dependencies]
bevy_fast_tilemap = { version = "0.7.0" }
bevy = { version = "0.13.0" }
rand = { version = "0.8.5" }
serde = "1.0.183"
ron = "0.8.0"
